# imoto_equipment

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: coldpress_operator.launch  cutter_control.launch  cutter_operator.launch  heat_cold_press_control.launch  heatpress_operator.launch  plc_ros_bridge_coldpress_IMC6219.launch  plc_ros_bridge_cutter_IMC62F1.launch  plc_ros_bridge_heatpress_IMC6219.launch  press_machine_control_all.launch  press_machine_control_all_mock.launch
scripts/: coldpress_operator_node.py  cutter_operator_node.py  heatpress_operator_node.py  press_machine_operator_mock_node.py
src/imoto_equipment/: cutter_operator.py  press_machine_operator.py
